2023-08-25 0.4.2
    - Supporting 'context_cache' for SendNotificationPlugin (a local cache of JSON-LD contexts)
    
2023-08-25 0.4.1
    - Fixing artifacts of communica rewriting of blank nodes bug

2023-06-28 0.4.0
    - Breaking change: policy arguments are now RDF.Terms[]
  
2023-06-27 
    - Adding mocha tests
    - Breaking change: policy/Executor.ts/executePolicies now returns Promise<IPolicyExecution[]>
    - Changing execution of policies, they are executed not anymore per pol:policy triple but fno:Execution triple.
  
2023-06-08 0.3.2
    - Bumping up eye version
  
2023-05-24 0.3.1
    - Making pol into a sequential executor of policies
  
2023-05-12 0.3.0
    - Advise to prevent using blank nodes in rule conclusions
    - Use these {} => { ...} trick as in rules/demo/00_demo_blanknode.n3 in case blank nodes are needed
  
2023-05-11
    - Adding support for an sh:order execution order in the plugins
    - Refactoring policy extractor logging messages
  
2023-04-27
    - Removing Ntfy and Email plugin (they are separate packages)
    - Removing experimental blogic and solid code (need to be separate packages)
  
2023-04-27 0.2.8
    - Exporting all Executor and Extractor functions
    - Simplifying the README
    
2023-04-26 0.2.7
    - Fixing error output
    
2023-04-25 
    - Processing the main store only one time and passing it to all policy executors
    
2023-04-21 0.2.6
    - Fixing contentType bug in sendNotification
    
2023-04-19 0.2.5
    - Fixing dist output
    - Adding npm batch
  
2023-04-19 0.2.4
    - Fixing reasoner state bug
  
2023-04-13 0.2.3
    - Fixing dependencies
    - Adding support for multiple mainSubjects
    - Fixing documentation
  
2023-04-05 0.2.2
    - Adding more tunable DemoPlugin with friendly text output
  
2023-04-03 0.2.1
    - Adding components/ and dist/ to npm version

2023-03-30 0.2.0
    - Refactoring of the code
    - Replacing all JSON configuration files by Component.JS JSON-LD