@@ -1,3 +1,8 @@
+2023-08-26 
+    - Reverted the context_cache the caches are implementd for parsing and serialization
+      utilities via a new contextloader
+    - Supporting activitystreams and coar notify local caching for now
+    
 2023-08-25 0.4.2
     - Supporting 'context_cache' for SendNotificationPlugin (a local cache of JSON-LD contexts)
     
